<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:weightSum="4">

    <ImageView
        android:layout_width="0sp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:src="@drawable/pwrlogo"
        android:contentDescription="@string/logo" />

    <LinearLayout
        android:layout_width="0sp"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:weightSum="2"
        android:orientation="vertical">


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/Sign_in"
            android:text="@string/sign_in"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/Register"
            android:text="@string/register"/>

    </LinearLayout>

</LinearLayout>