<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="1"
        android:id="@+id/pathRev"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rate_view"
        android:text="@string/average"
        android:textStyle="bold"
        android:textSize="25sp"/>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:id="@+id/list_of_reviews"
        android:layout_weight="9">
    </ListView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/back_rev"
            android:text="@string/back"/>

        <Button
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/add_rev"
            android:text="@string/add"/>

    </LinearLayout>

</LinearLayout>